# PhototransductSim

./: .gitignore  MANIFEST.in  NOTICE.md  README.md  mkdocs.yml  phototransductsim.iss  phototransductsim.spec  pyproject.toml  requirements.txt  runtime_hook.py  tree.txt
.dev/: collapsiblesection.py  dev_collapsiblesection.py
.dev/qt designer/: ui.ui  ui_shell.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-test.yml  build.yml
.python312/: pyvenv.cfg
.python312/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
.python39/: pyvenv.cfg
.python39/Scripts/: activate  activate.bat
docs/: index.md  user-guide.md
src/data/: model_inputs.yaml  mouse_cone.json  settings.json
src/main/app/: application.py  baseapp.py  splash.py  version.py
src/main/controller/: __init__.py  controller.py
src/main/data/: aes.yaml  configs.yaml  model_inputs.yaml  mouse_rod.json  settings.json  ui_menu.yaml
src/main/model/: __init__.py  phototransduction.py  simulationworker.py
src/main/utils/: __init__.py  camel_to_title.py  num_to_str.py  numpyencoder.py  safe_eval.py  statebuffer.py
src/main/view/: ui.py
src/main/view/components/: __init__.py  axes.py  axestoolbar.py  collapsiblecontainer.py  collapsiblesection.py  lineitem.py
src/resources/icons/: psim.icns
src/resources/styles/: ui.qss
src/test/: test_collapsiblesection.py  test_phototransduction.py  test_statebuffer.py
