[tool.poetry]
name = "PhototransductSim"
version = "0.1.0"
description = "A comprehensive application for simulating and visualizing rod photoreceptor signaling."
authors = ["Khris Griffis, Ph.D. <khris.griffis.phd@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "^1.4.4"
matplotlib = "^3.9.1"
mplcursors = "^0.5.3"
numpy = "^2.0.1"
pandas = "^2.2.2"
pyqt6 = "^6.7.1"
pyyaml = "^6.0.1"
reportlab = "^4.2.2"
scipy = "^1.14.0"
setuptools = "^71.1.0"
wheel = "^0.43.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = "^22.8"
flake8 = "^6.1"
mypy = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
